src/snapshots/afrotd__parser__tests__rule_html_10.2.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            10.2.5 Fouls während oder nach einem Touchdown, Fieldgoal oder Try
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Fouls durch das nicht punktende Team während eines Downs,
                der in einem Touchdown endet (nicht beim Try).
                    <ol type="1">
                        <li>15-Meterstrafen für persönliche Fouls und für
                        unsportliche Verhalten Fouls werden, je nach Wahl des
                        punkteerzielenden Teams, beim Try, dem anschließenden
                        Kickoff oder vom Succeeding Spot in Extraperioden
                        durchgeführt.
                        </li>
                        <li>5- oder 10-Meterstrafen werden nicht beim Try oder
                        dem anschließenden Kickoff durchgeführt. Diese Strafen
                        werden durch die Regel aufgehoben, es sei denn, die
                        Strafdurchführung wird durch eine illegale Berührung
                        eines Kicks während des Downs möglich (A.R. 6.3.2.III
                        und 6.3.2.IV).
                        </li>
                    </ol>
                </li>
                <li>Strafen für Defense Passbehinderungsfouls bei einem Try von
                oder innerhalb der 3-Meterlinie werden mit der Halbierung der
                Distanz zur Goalline durchgeführt. Wenn der Try erfolgreich
                war, wird die Strafe durch die Regel aufgehoben.
                </li>
                <li>Ereignen sich ein oder mehrere Fouls nach einem Touchdown
                und bevor der Ball beim Try spielbereit ist oder ereignen sich
                während eines Downs, bei dem ein Touchdown erzielt wird, Live
                Ball Fouls, die als Dead Ball Fouls behandelt werden, erfolgt
                die Strafdurchführung, je nach Wahl des gefoulten Teams beim
                Try, dem anschließenden Kickoff oder vom Succeeding Spot in
                Extraperioden (A.R. 3.2.3.V).
                </li>
                <li>Strafen für Live Ball Fouls während Fieldgoals werden gemäß
                den Regeln durchgeführt. Wenn das Fieldgoal erfolgreich ist,
                hat Team A die Wahl, die Punkte abzulehnen und die Strafe vom
                Previous Spot anzunehmen oder die Strafe(n) abzulehnen und die
                Punkte zu akzeptieren. Team A kann die Punkte akzeptieren,
                wobei die Strafen für persönliche Fouls und
                unsportliche-Verhalten-Fouls beim anschließenden Kickoff oder
                vom Succeeding Spot in Extraperioden durchgeführt werden
                können. Strafen für Live Ball Fouls, die wie Dead Ball Fouls
                behandelt werden und solche für Dead Ball Fouls nach einem
                Fieldgoal Down werden vom Succeeding Spot durchgeführt.
                </li>
                <li>Strafen für Fouls während und nach einem Try Down werden
                gemäß den Regeln 8.3.3, 8.3.4, 8.3.5 und 10.2.5.b durchgeführt
                (A.R. 3.2.3.VI und 3.2.3.VII).
                </li>
                <li>Distanzstrafen für Fouls durch eines der Teams dürfen die
                Free Kick Restraining Line dieses Teams nicht hinter ihre
                5-Meterlinie zurückbringen. Strafen, die die Restraining Line
                dieses Teams hinter deren 5-Meterlinie bringen würden, werden
                vom nächsten Succeeding Spot durchgeführt.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.10.2.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
