src/snapshots/afrotd__parser__tests__rule_html_11.1.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            11.1.1 Zuständigkeiten
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Die Zuständigkeit der Schiedsrichter beginnt mit deren
                Erreichen des Spielortes. Sie endet mit der Übergabe des
                Spielberichtes an die zuständigen Vertreter des
                Heimteam-Managements.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.11.1.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
