src/snapshots/afrotd__parser__tests__rule_html_11.2.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            11.2.2 Generelle Verantwortlichkeiten
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Die Verantwortlichkeiten, Aufgaben und Mechanics werden in dem
                jeweils gültigen Mechanicsbuch der AFSVD aufgeführt.
                Schiedsrichter sind verpflichtet, die im Mechanicsbuch
                aufgeführte Verhaltensweisen für Schiedsrichter zu kennen und
                sie entsprechend anzuwenden.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.11.2.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
