src/snapshots/afrotd__parser__tests__rule_html_2.10.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.10.2 Persönliches Foul
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein persönliches Foul ist ein Foul, welches einen illegalen
                physischen Kontakt beinhaltet, durch den die Sicherheit eines
                anderen Spielers gefährdet ist.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.10.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
