src/snapshots/afrotd__parser__tests__rule_html_2.10.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.10.3 Schweres persönliches Foul
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein schweres persönliches Foul ist ein illegaler physischer
                Kontakt, der vorsätzlich oder so brutal ist, dass ein Gegner
                der Gefahr einer erheblichen Verletzung ausgesetzt werden
                könnte.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.10.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
